feat: added utils and updated makefile.inc

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,1 +1,1 @@
-CFLAGS = -g --std=c11 -fsanitize=address  -Wall -Wextra -Wno-unused-parameter -pthread -pedantic -pedantic-errors -Wno-newline-eof -Wno-implicit-fallthrough
+CFLAGS = -g --std=c11 -fsanitize=address  -Wall -Wextra -Wno-unused-parameter -pthread -pedantic -pedantic-errors -Wno-implicit-fallthrough
