feat: added passive and active socket configuration

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,10 +9,12 @@ OBJS = $(SOURCES:.c=.o)
 
 all: $(OBJS)
 	cd utils; make all
+	cd pop3; make all
 	$(CC) $(CFLAGS) $(MAIN) -I$(INCDIR) $(OBJS) -o $(TARGET)
 
 clean:
 	cd utils; make clean
+	cd pop3; make clean
 	rm -f $(TARGET)
 
 .PHONY: all clean
