feat: makefile changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,18 +3,20 @@ TARGET = server.out
 INCDIR = ./include
 MAIN = main.c
 
-SRCDIRS = utils pop3 parsers metrics
+SRCDIRS = utils pop3 parser metrics
 SOURCES = $(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.c))
 OBJS = $(SOURCES:.c=.o)
 
 all: $(OBJS)
 	cd utils; make all
 	cd pop3; make all
+	cd parser; make all
 	$(CC) $(CFLAGS) $(MAIN) -I$(INCDIR) $(OBJS) -o $(TARGET)
 
 clean:
 	cd utils; make clean
 	cd pop3; make clean
+	cd parser; make clean
 	rm -f $(TARGET)
 
 .PHONY: all clean
