feat: added args interpreter
co-authored-by: mrojaspelliccia <morjaspelliccia@itba.edu.ar>

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,7 @@ include Makefile.inc
 TARGET = server.out
 INCDIR = ./include
 MAIN = main.c
+ARGS = args.c
 
 SRCDIRS = utils pop3 parser metrics
 SOURCES = $(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.c))
@@ -11,7 +12,7 @@ all: $(OBJS)
 	cd utils; make all
 	cd pop3; make all
 	cd parser; make all
-	$(CC) $(CFLAGS) $(MAIN) -I$(INCDIR) $(OBJS) -o $(TARGET)
+	$(CC) $(CFLAGS) $(MAIN) $(ARGS) -I$(INCDIR) $(OBJS) -o $(TARGET)
 
 clean:
 	cd utils; make clean
