refactor: reorganized files

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,6 @@ include Makefile.inc
 TARGET = server.out
 INCDIR = ./include
 MAIN = main.c
-ARGS = args.c
 
 SRCDIRS = utils pop3 parser metrics
 SOURCES = $(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.c))
@@ -12,7 +11,7 @@ all: $(OBJS)
 	cd utils; make all
 	cd pop3; make all
 	cd parser; make all
-	$(CC) $(CFLAGS) $(MAIN) $(ARGS) -I$(INCDIR) $(OBJS) -o $(TARGET)
+	$(CC) $(CFLAGS) $(MAIN) -I$(INCDIR) $(OBJS) -o $(TARGET)
 
 clean:
 	cd utils; make clean
