fix: management struct conversion

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,7 @@ all: $(OBJS)
 	cd pop3; make all
 	cd parser; make all
 	cd server; make all
+	cd client; make all
 	$(CC) $(CFLAGS) $(MAIN) -I$(INCDIR) $(OBJS) -o $(TARGET)
 
 clean:
@@ -19,6 +20,7 @@ clean:
 	cd pop3; make clean
 	cd parser; make clean
 	cd server; make clean
+	cd client; make clean
 	rm -f $(TARGET)
 
 .PHONY: all clean
