--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -4,9 +4,10 @@ SRC = client.c
 TARGET = client.out
 INCLUDE = ./include
 SOURCES = $(wildcard *.c)
+MNG_LIB = ../server/m3.o
 
 all:
-	$(CC) $(CFLAGS) $(SRC) -I$(INCLUDE) -o $(TARGET)
+	$(CC) $(CFLAGS) $(SRC)  $(MNG_LIB) -I$(INCLUDE) -o $(TARGET)
 
 clean:
 	rm  -f *.o
